fix: adjust header logo alignment

--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,16 @@ button {
   border-bottom: 1px solid #33a8db80;
 }
 
+.header-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .logo-img-container {
+  width: 14.25rem;
+  height: auto;
   background-color: rgba(0, 0, 0, 0.25);
   border-radius: 50%;
   padding: 1.35rem;
